--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="shortcut icon"
+      href="./assets/img/favicon.ico"
+      type="image/x-icon"
+    />
     <title>Simple Weather App</title>
   </head>
   <body>
